[package]
name = "moria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1


[dependencies]
rand = "0.8"
bevy = "0.13"
bevy-inspector-egui="0.23"
bevy_panorbit_camera="0.17"
bevy_rapier3d = "0.25"
