[package]
name = "moria"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1


[dependencies]
rand = "~0.8"
bevy = "0.13.2"
bevy-inspector-egui="~0.24"
bevy_xpbd_3d="~0.4.2"
serde = "~1.0"
toml="~0.8"
serde_json ="~1.0"
bincode="~1.3"
dirs="~5.0"