[package]
name = "moria"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1


[dependencies]
rand = "0.8"
bevy = "0.14"
bevy-inspector-egui="0.25"
bevy_rapier3d = {version= "0.27", features=['serde-serialize']}
serde = "1.0"
toml="0.8"
serde_json ="1.0"
bincode="1.3"
dirs="5.0"